<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textColor="@color/textPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="48dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:text="@string/btn_continue"
        android:textSize="16sp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnNewWorld"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnNewWorld"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:text="@string/btn_new_world"
        android:textSize="16sp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnQuit"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:text="@string/btn_quit"
        android:textSize="16sp"
        android:backgroundTint="#555555"
        app:layout_constraintTop_toBottomOf="@id/btnNewWorld"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
